# lotus

./: .gitignore  Cargo.toml  README.md
assets/piskel_temp/: New Piskel-20250227-090208.piskel  branco.piskel  rosa.piskel
assets/piskel_temp/pong/: bolinha-20250313-110418.piskel  cenario sem pessoa.piskel  rsquetes-20250313-112717.piskel
assets/shaders/: background_shader.wgsl  batch_shader.wgsl  color_shader.wgsl  shader.wgsl  shader_2d.wgsl  shader_main.wgsl  shared_shader.wgsl  texture_shader.wgsl
examples/: breakout.rs  gamepad.rs  gravity_simulation.rs  hello_world.rs  main.rs  performance.rs  physics_simulation.rs  player_animation.rs  pong.rs  simple_animation.rs  simple_camera.rs  simple_shapes.rs  simple_sprite.rs  simple_text.rs  text_management.rs
lotus_proc_macros/: Cargo.toml
lotus_proc_macros/src/: component.rs  lib.rs  resource.rs
src/: lib.rs  main.rs  rendering_manager.rs  shader.wgsl  window_manager.rs
src/core/: animation.rs  asset_loader.rs  collision.rs  color.rs  context.rs  draw_order.rs  engine.rs  event_dispatcher.rs  game_loop.rs  input.rs  macros.rs  mod.rs  rendering_manager.rs  shape.rs  sprite.rs  text.rs  texture.rs  transform.rs  visibility.rs  window_manager.rs  windowing_manager.rs
src/core/animation/: animation.rs  animation_state.rs  looping_state.rs  mod.rs
src/core/audio/: audio_error.rs  audio_source.rs  mod.rs
src/core/bindings/: keyboard_input.rs  mod.rs  mouse_input.rs
src/core/bindings/gamepad/: axis_state.rs  gamepad_button.rs  gamepad_input.rs  gamepad_instance.rs  joystick.rs  mod.rs
src/core/bindings/keyboard/: keyboard_input.rs  keyboard_key.rs  mod.rs
src/core/bindings/mouse/: mod.rs  mouse_input.rs  mouse_position.rs
src/core/camera/: camera2d.rs  mod.rs
src/core/color/: color.rs  mod.rs  option.rs
src/core/ecs/: archetype.rs  command.rs  component.rs  entitiy.rs  entity.rs  mod.rs  query.rs  resource.rs  world.rs
src/core/event/: dispatcher.rs  mod.rs  synchronizer.rs
src/core/input/: gamepad_input.rs  input.rs  keyboard_input.rs  mod.rs  mouse_Input.rs
src/core/listeners/: mod.rs
src/core/listeners/game_loop/: listener.rs  mod.rs
src/core/listeners/gamepad/: listener.rs  mod.rs
src/core/managers/: mod.rs  rendering_manager.rs  windowing_manager.rs
src/core/managers/gamepad/: manager.rs  mod.rs
src/core/managers/render/: executor.rs  manager.rs  mod.rs  render_type.rs  rendering_type.rs
src/core/managers/rendering/: cache.rs  manager.rs  mod.rs  rendering_type.rs
src/core/physics/: acceleration.rs  collision.rs  gravity.rs  mod.rs  rigid_body.rs  transform.rs  velocity.rs
src/core/shape/: geometry_type.rs  mod.rs  orientation.rs  shape.rs
src/core/text/: font.rs  mod.rs  text.rs
src/core/texture/: cache.rs  mod.rs  sprite.rs  sprite_sheet.rs  texture.rs
src/core/time/: mod.rs  timer.rs
src/test/: ecs.rs
src/utils/: constants.rs  mod.rs
tests/: bindings.rs  ecs.rs  mod.rs
to-do/: README.md
tutorial/: README.md
(+15 files in other folders)
