[package]
name = "lotus_engine"
version = "0.2.0"
authors = ["Alexandre Zeni <zenialexandre123@gmail.com>"]
description = "Lotus is a game engine with the main focus of being easy-to-use and straight forward on developing 2D games."
license = "MPL-2.0"
edition = "2021"
repository = "https://github.com/zenialexandre/lotus"
documentation = "https://docs.rs/lotus_engine"

[dependencies]
lotus_proc_macros = { path = "lotus_proc_macros", version = "0.1.1" }
winit = { version = "0.30.12", features = ["rwh_05"] }
wgpu = "26.0.1"
kira = "0.10.8"
cpal = "0.16.0"
wgpu_text = "26.0.0"
cgmath = "0.18"
image = { version = "0.25.6", features = ["png", "jpeg"] }
pollster = "0.4"
bytemuck = { version = "1.23.2", features = [ "derive" ] }
anyhow = "1.0.99"
uuid = { version = "1.18.0", features = ["v4"] }
rand = "0.9.2"
atomic_refcell = "0.1"
once_cell = "1.21.3"
env_logger = "0.11.8"
log = "0.4.27"

[profile.dev]
opt-level = 0

[profile.release]
opt-leve = 3
